<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                app:tint="@color/colorBlack"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_stethoscope_icon"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/font_14"
                android:fontFamily="@font/poppinsmedium"
                android:alpha="0.8"
                android:layout_weight="1"
                android:paddingTop="@dimen/margin_5"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_15"
                android:text="@string/doctor_details" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/doctor_details"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                app:tint="@color/colorBlack"
                android:layout_width="20dp"
                android:alpha="0.7"
                android:layout_height="20dp"
                android:src="@drawable/ic_plus_icon"
                android:layout_gravity="center"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.8"
                android:layout_marginStart="@dimen/font_14"
                android:fontFamily="@font/poppinsmedium"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_15"
                android:text="@string/clinic_hospital_name" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hostiptal_name"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                app:tint="@color/colorBlack"
                android:layout_width="20dp"
                android:alpha="0.7"
                android:layout_height="20dp"
                android:src="@drawable/ic_signature_with_a_pen"
                android:layout_gravity="center"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="0dp"
                android:alpha="0.8"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/font_14"
                android:fontFamily="@font/poppinsmedium"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_15"
                android:text="@string/footer_details" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/footer_details"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_pharmacist"
            android:visibility="visible"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/referral_center_icons"
                android:layout_gravity="center"
                android:contentDescription="@null"
                app:tint="@color/colorBlack" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.8"
                android:layout_marginStart="@dimen/font_14"
                android:fontFamily="@font/poppinsmedium"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_15"
                android:text="Add Referral Centre" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_of_calender"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_calendar_icon"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.8"
                android:layout_marginStart="@dimen/font_14"
                android:fontFamily="@font/poppinsmedium"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_15"
                android:text="Change Date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_to_pharmacist"
            android:visibility="gone"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                app:tint="@color/colorBlack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:alpha="0.7"
                android:src="@drawable/ic_action_send_pharmacist"
                android:layout_gravity="center"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/font_14"
                android:fontFamily="@font/poppinsmedium"
                android:alpha="0.8"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_15"
                android:text="@string/send_to_pharmacist" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/language"
            android:visibility="gone"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                app:tint="@color/colorBlack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_action_language"
                android:alpha="0.7"
                android:layout_gravity="center"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/font_14"
                android:alpha="0.8"
                android:fontFamily="@font/poppinsmedium"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_15"
                android:text="@string/language" />


        </LinearLayout>

    </LinearLayout>

</layout>